# environmental-sound-classification

./: .gitignore  dataset.py  pyproject.toml  trainer.py
tools/: check_prof.py  sample.prof
