[tool.poetry]
name = "environmental-sound-classification"
version = "0.1.0"
description = ""
authors = ["Yuji Kamiya <y.kamiya0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.6.0"
torchvision = "^0.7.0"
torchaudio = "^0.6.0"
logzero = "^1.5.0"
tensorboard = "^2.3.0"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
